Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11288

tgt_grant_sanity_check()) LBUG

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.12.0
    • Lustre 2.12.0
    • None
    • 3
    • 9223372036854775807

      Had this trigger in racer in current master-next, but does not appear to be caused by anything unlanded.

      [ 2800.273242] LustreError: 20863:0:(tgt_grant.c:151:tgt_check_export_grants()) lustre-OST0002: cli e57bac33-ee31-2bdc-225e-2658736d80ff/ffff880251df1800 ted_grant(1142554624) + ted_pending(0) > maxsize(250609664)
      [ 2800.312893] LustreError: 20863:0:(tgt_grant.c:223:tgt_grant_sanity_check()) LBUG
      [ 2800.319055] Pid: 20863, comm: ll_ost_create07 3.10.0-7.5-debug #1 SMP Sun Jun 3 13:35:38 EDT 2018
      [ 2800.321344] Call Trace:
      [ 2800.322479]  [<ffffffffa01cd7dc>] libcfs_call_trace+0x8c/0xc0 [libcfs]
      [ 2800.327468]  [<ffffffffa01cd88c>] lbug_with_loc+0x4c/0xa0 [libcfs]
      [ 2800.328911]  [<ffffffffa0bbbf7c>] tgt_grant_sanity_check+0x51c/0x550 [ptlrpc]
      [ 2800.333566]  [<ffffffffa127dc14>] ofd_statfs+0x104/0x480 [ofd]
      [ 2800.334982]  [<ffffffffa12712e0>] ofd_statfs_hdl+0x70/0x280 [ofd]
      [ 2800.335938] LustreError: 3246:0:(tgt_grant.c:151:tgt_check_export_grants()) lustre-OST0002: cli e57bac33-ee31-2bdc-225e-2658736d80ff/ffff880251df1800 ted_grant(1142554624) + ted_pending(0) > maxsize(250609664)
      [ 2800.335961] LustreError: 3246:0:(tgt_grant.c:223:tgt_grant_sanity_check()) LBUG
      [ 2800.344690]  [<ffffffffa0ba0705>] tgt_request_handle+0xaf5/0x1590 [ptlrpc]
      [ 2800.348268]  [<ffffffffa0b44e26>] ptlrpc_server_handle_request+0x256/0xad0 [ptlrpc]
      [ 2800.350975]  [<ffffffffa0b48c1e>] ptlrpc_main+0xabe/0x1f80 [ptlrpc]
      [ 2800.352543]  [<ffffffff810ae864>] kthread+0xe4/0xf0
      [ 2800.354434]  [<ffffffff81783777>] ret_from_fork_nospec_end+0x0/0x39
      [ 2800.356861]  [<ffffffffffffffff>] 0xffffffffffffffff
      [ 2800.360929] Kernel panic - not syncing: LBUG
      [ 2800.360945] Pid: 3246, comm: ll_ost_create00 3.10.0-7.5-debug #1 SMP Sun Jun 3 13:35:38 EDT 2018
      [ 2800.360945] Call Trace:
      [ 2800.360972]  [<ffffffffa01cd7dc>] libcfs_call_trace+0x8c/0xc0 [libcfs]
      [ 2800.360977]  [<ffffffffa01cd88c>] lbug_with_loc+0x4c/0xa0 [libcfs]
      [ 2800.361073]  [<ffffffffa0bbbf7c>] tgt_grant_sanity_check+0x51c/0x550 [ptlrpc]
      [ 2800.361090]  [<ffffffffa127dc14>] ofd_statfs+0x104/0x480 [ofd]
      [ 2800.361093]  [<ffffffffa12712e0>] ofd_statfs_hdl+0x70/0x280 [ofd]
      [ 2800.361125]  [<ffffffffa0ba0705>] tgt_request_handle+0xaf5/0x1590 [ptlrpc]
      [ 2800.361152]  [<ffffffffa0b44e26>] ptlrpc_server_handle_request+0x256/0xad0 [ptlrpc]
      [ 2800.361190]  [<ffffffffa0b48c1e>] ptlrpc_main+0xabe/0x1f80 [ptlrpc]
      [ 2800.361196]  [<ffffffff810ae864>] kthread+0xe4/0xf0
      [ 2800.361200]  [<ffffffff81783777>] ret_from_fork_nospec_end+0x0/0x39
      [ 2800.361203]  [<ffffffffffffffff>] 0xffffffffffffffff
      

            bzzz Alex Zhuravlev
            green Oleg Drokin
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: